[workspace]
members = [
    "crates/libtorrent",
    "crates/libtorrent-proto",
    "crates/spider"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
authors = ["libtorrent-rust contributors"]

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
bytes = "1.6"
thiserror = "1.0"
sha1 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tracing = "0.1"
hex = "0.4"
tracing-subscriber = "0.3"
bendy = "0.3"
